--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "ng-zorro-antd": "^14.2.0",
     "ngx-ui-loader": "^13.0.0",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "^14.2.9",
     "@angular/cli": "~14.2.9",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
