--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "ng-zorro-antd": "^14.2.0",
+    "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
