--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "chart.js": "^4.0.1",
     "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "ng-zorro-antd": "^14.2.0",
+    "ng2-charts": "^4.0.2",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
