--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-
-Frontend/package.json
-Frontend/src/environments/environment.ts
-Frontend/src/environments/environment.ts
 Frontend/package-lock.json
+Backend/.env
+Frontend/package.json
